2012-01-12  Junji Tojo <Junji.Tojo@cern.ch>
        * Added outputNTUP_SUSYTAG, outputNTUP_SUSYRAZOR, outputNTUP_SUSY23LEP in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-89

2012-01-23 Steven Beale <steven.beale@physik.uni-muenchen.de>
    * Added Merging RDO files
    * Tagging as PATJobTransforms-00-03-88

2012-01-23 Bjorn Sarrazin  <bjorn.sarrazin@cern.ch>
    * set EvtMax=0 in MergeNTUP_trf.py (for panda monitor)
    * Tagging as PATJobTransforms-00-03-87

2012-01-20 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Removed the special handling of NTUP_TRIG. Now it's handled
	  through the regular D3PD production schema.
	* Tagging as PATJobTransforms-00-03-86

2012-01-12  Junji Tojo <Junji.Tojo@cern.ch>
        * Added outputNTUP_ZPRIMEEE in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-85
	
2011-12-15 Bjorn Sarrazin  <bjorn.sarrazin@cern.ch>
    * Added ListofDefaultPositionalKeys to MergeNTUP_trf.py

2011-12-15 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Added support for DigiMReco_trf in GetCommand. 

2011-12-02  John Chapman  <John.Chapman@cern.ch>

	* share/skeleton.MergeHIT.py - correct log file name when
	executing postExecs.
	* Tagging as PATJobTransforms-00-03-83

2011-12-01 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Reverting the change, as Bertrand failed to note down
	  his own change in the ChangeLog... :-(
	* Tagging as PATJobTransforms-00-03-82

2011-12-01 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Added the NTUP_HSG5GAMZ type to Reco_trf.py
	* Tagging as PATJobTransforms-00-03-81 (Nope...)

2011-11-11 Steven Beale <steven.beale@physik.uni-muenchen.de>
    * Updated fast merge to accomodate changes to mergePOOL.exe (add -e MetaDataHdr)
    * Tagging as PATJobTransforms-00-03-80

2011-11-20 Bjoern Sarrazin <bjorn.sarrazin@cern.ch>
    * test for non integer values of event number in BaseOfBasic.matchEventsExpectEqual()